--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <i class="fa-solid fa-arrow-right-arrow-left"></i>
                 </span>
                 <span>
-                    <input list="cu" class="out" placeholder="to" id="out">
+                    <input list="cu" class="out" placeholder="To" id="out">
                     <datalist id ="cu">
                     </datalist>
                 </span>
